# XgenPCB

./: .env.example  .gitignore  AI_PCB_Design_Competitive_Analysis_2026.md  CODEBASE_GUIDE.md  DEPLOY.md  DOCKER_STATUS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PCB_PLATFORM_REQUIREMENTS.md  README.md  SPEC.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/: Dockerfile  Makefile  footprints_index.json  fp-lib-table  init_db.py  pyproject.toml  start.sh
backend/alembic/versions/: add_jobs_idempotency.py
backend/scripts/migrations/: 001_initial_schema.sql  002_seed_data.sql
backend/services/: comparison_service.py  storage_service.py
backend/services/ai_service/: routes.py  tasks.py
backend/services/analytics_service/: __init__.py  routes.py
backend/services/component_service/: routes.py
backend/services/eda_service/: __init__.py  gerber_service.py  routes.py  tasks.py
backend/services/fab_service/: __init__.py  routes.py
backend/services/gateway/: main.py
backend/services/project_service/: __init__.py  routes.py
backend/services/user_service/: __init__.py  routes.py
backend/shared/: __init__.py  celery_app.py  config.py  database.py  logging_config.py
backend/shared/agents/: __init__.py  base.py  orchestrator.py
backend/shared/agents/stages/: __init__.py  intent.py  output.py  placement.py  routing.py  schematic.py  validation.py
backend/shared/clients/: jlcpcb.py  kicad.py  lcsc.py
backend/shared/middleware/: __init__.py  auth.py  correlation.py  error_handler.py  idempotency.py  rate_limit.py
backend/shared/models/: __init__.py
backend/shared/schemas/: __init__.py
backend/shared/validation/: __init__.py  dfm_engine.py  drc_engine.py  explainability.py  multi_candidate.py  si_analyzer.py
data/: pcb_llm_dataset.json  pcb_routing_dataset.json
frontend/: Dockerfile
rl_training/: __init__.py  (+7 more)
(+59 files in other folders)
