[project]
name = "pcb-builder-backend"
version = "0.1.0"
description = "PCB Builder - Backend Services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "redis>=5.0.3",
    "boto3>=1.34.69",
    "stripe>=8.8.0",
    "celery[redis]>=5.3.6",
    "python-dotenv>=1.0.1",
    "alembic>=1.13.1",
    "tenacity>=8.2.3",
    "structlog>=24.1.0",
    "orjson>=3.9.15",
    "email-validator>=2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.4",
    "mypy>=1.9.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
]
ai = [
    "openai>=1.14.2",
    "tiktoken>=0.6.0",
    "sentence-transformers>=2.6.1",
]
rl = [
    "jax>=0.4.25",
    "optax>=0.2.2",
    "orbax-checkpoint>=0.5.10",
    "gymnasium>=0.29.1",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
